# stromy-workflows-mcp

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fastmcp.json  pyproject.toml
.agents/: mcp.json
.claude/: settings.json
.claude/skills/mcp-maintain/: SKILL.md
.claude/skills/mcp-maintain/references/: aca-runbook.md  orientation.md
.claude/skills/wf-guide/: SKILL.md
.claude/skills/wf-stakeholder-analysis/: SKILL.md
.codex/: config.toml
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copier-update.yml  deploy-aca.yml  notify-parent.yml
azure_aca/: README.md
components/prompts/: example_prompt.py
components/resources/: example_resource.py
components/resources/contracts/: README.md  stakeholder_analysis_workflow.json  weekly_intel_workflow.json
components/tools/: example_tool.py  fs_tools.py  workflows.py
scripts/: bootstrap.sh  register-terraform.sh  render-agent-md.py  render-mcp.py  sync_contracts.py  sync_skill_stubs.py
skills/server-guide/: SKILL.md
skills/wf-guide/: SKILL.md
skills/wf-stakeholder-analysis/: SKILL.md
src/stromy_workflows_mcp/: aca.py  auth.py  config.py  config_base.py  contracts.py  fs.py  identity.py  logging.py  middleware.py  registry.py  scoping.py  server.py  server_hooks.py  service.py
tests/: conftest.py  test_auth.py  test_chrome.py  test_server.py
